# SimpleWebsocketClient

./: CMakeLists.txt  README.md
src/: WebsocketClient.cpp  WebsocketClient.h  main.cpp
test/: WebsocketClientTest.cpp  WebsocketMockServer.cpp  WebsocketMockServer.h
